--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -1,7 +1,8 @@
-bootstrap.servers=localhost:29092
-
+bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#value.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
+value.deserializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
 acks=all
 
 #Properties below this line are specific to code in this application
