--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -1,9 +1,12 @@
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-#value.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
-value.deserializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
 acks=all
+
+max.poll.interval.ms=300000
+enable.auto.commit=true
+auto.offset.reset=earliest
+group.id=tweet-consumers
 
 #Properties below this line are specific to code in this application
 topic.name=tweets
