--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -1,6 +1,8 @@
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
 acks=all
 
 max.poll.interval.ms=300000
