--- a/tweet-producer/src/main/resources/kafka.properties
+++ b/tweet-producer/src/main/resources/kafka.properties
@@ -1,14 +1,14 @@
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
-key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-value.deserializer=com.cheaito.twitter.serializers.TweetKafkaTypeAdapter
+value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 acks=all
-
+schema.registry.url=http://localhost:8081
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+specific.avro.reader=true
 max.poll.interval.ms=300000
 enable.auto.commit=true
 auto.offset.reset=earliest
 group.id=tweet-consumers
-
 #Properties below this line are specific to code in this application
 topic.name=tweets
