--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <modules>
         <module>tweet-producer</module>
         <module>tweet-aggregator</module>
+        <module>tweet-consumer</module>
+        <module>tweet-model</module>
     </modules>
 
     <repositories>
@@ -32,6 +34,11 @@
                 <groupId>org.jboss.weld.se</groupId>
                 <artifactId>weld-se</artifactId>
                 <version>2.4.8.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>2.6.0</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -58,11 +65,6 @@
                 <artifactId>avro</artifactId>
                 <version>${avro.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro-maven-plugin</artifactId>
-                <version>${avro.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -77,44 +79,6 @@
                         <source>1.8</source>
                         <target>1.8</target>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.avro</groupId>
-                    <artifactId>avro-maven-plugin</artifactId>
-                    <version>${avro.version}</version>
-                    <executions>
-                        <execution>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>schema</goal>
-                                <goal>protocol</goal>
-                                <goal>idl-protocol</goal>
-                            </goals>
-                            <configuration>
-                                <sourceDirectory>src/main/resources/avro</sourceDirectory>
-                                <stringType>String</stringType>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.0.0</version>
-                    <executions>
-                        <execution>
-                            <id>add-source</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>add-source</goal>
-                            </goals>
-                            <configuration>
-                                <sources>
-                                    <source>target/generated-sources/avro</source>
-                                </sources>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
