--- a/tweet-aggregator/pom.xml
+++ b/tweet-aggregator/pom.xml
@@ -14,8 +14,21 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.cheaito.twitter</groupId>
+            <artifactId>tweet-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
         </dependency>
     </dependencies>
 
