--- a/tweet-aggregator/src/main/resources/kafka.properties
+++ b/tweet-aggregator/src/main/resources/kafka.properties
@@ -9,6 +9,6 @@ specific.avro.reader=true
 default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 default.value.serde=io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
 #Properties below this line are specific to code in this application
-sanitized.topic.name=tweets-sanitized
+source.topic.name=tweets-sanitized
 stats.recent.topic.name=tweets-stats-recent
 stats.alltime.topic.name=tweets-stats-alltime
