--- a/tweet-producer/pom.xml
+++ b/tweet-producer/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-            <version>4.5.12</version>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
