--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,12 @@ version: '3.1'
 services:
   postgres:
     image: postgres:9
+    container_name: postgres
     ports:
-      - 5432:5432
+      - 5434:5432
     environment:
       - POSTGRES_PASSWORD=postgres
+networks:
+  default:
+    external:
+      name: cp-all-in-one_default
