Added recent stats aggregator (WIP), docker build

--- a/tweet-aggregator/src/main/resources/kafka.properties
+++ b/tweet-aggregator/src/main/resources/kafka.properties
@@ -1,5 +1,5 @@
-bootstrap.servers=localhost:9092
-schema.registry.url=http://localhost:8081
+bootstrap.servers=192.168.1.79:9092
+schema.registry.url=http://192.168.1.79:8081
 application.id=tweet-aggregator
 auto.offset.reset=earliest
 #disable caching while developing the app
@@ -10,5 +10,8 @@ default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 default.value.serde=io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
 #Properties below this line are specific to code in this application
 source.topic.name=tweets-sanitized
-stats.recent.topic.name=tweets-stats-recent
 stats.alltime.topic.name=tweets-stats-alltime
+stats.recent.topic.name=tweets-stats-recent
+stats.recent.duration=60
+stats.recent.duration.advance=1
+
