--- a/tweet-aggregator/pom.xml
+++ b/tweet-aggregator/pom.xml
@@ -48,4 +48,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <configuration>
+                    <to>
+                        <image>${project.parent.artifactId}/tweet-aggregator</image>
+                    </to>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
