--- a/language-filter/src/main/resources/kafka.properties
+++ b/language-filter/src/main/resources/kafka.properties
@@ -1,5 +1,5 @@
-bootstrap.servers=localhost:9092
-schema.registry.url=http://localhost:8081
+bootstrap.servers=192.168.1.79:9092
+schema.registry.url=http://192.168.1.79:8081
 application.id=language-filter
 auto.offset.reset=earliest
 #disable caching while developing the app
