--- a/tweet-consumer/src/main/resources/kafka.properties
+++ b/tweet-consumer/src/main/resources/kafka.properties
@@ -1,5 +1,5 @@
-bootstrap.servers=localhost:9092
-schema.registry.url=http://localhost:8081
+bootstrap.servers=192.168.1.79:9092
+schema.registry.url=http://192.168.1.79:8081
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
 specific.avro.reader=true
