--- a/tweet-producer/src/main/resources/kafka.properties
+++ b/tweet-producer/src/main/resources/kafka.properties
@@ -1,7 +1,7 @@
-bootstrap.servers=localhost:9092
+bootstrap.servers=192.168.1.79:9092
+schema.registry.url=http://192.168.1.79:8081
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 acks=all
-schema.registry.url=http://localhost:8081
 #Properties below this line are specific to code in this application
 topic.name=tweets
