Rename hashtag topics

--- a/tweet-aggregator/src/main/resources/kafka.properties
+++ b/tweet-aggregator/src/main/resources/kafka.properties
@@ -10,8 +10,8 @@ default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 default.value.serde=io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
 #Properties below this line are specific to code in this application
 source.topic.name=tweets-sanitized
-stats.alltime.topic.name=tweets-stats-alltime
-stats.recent.topic.name=tweets-stats-recent
+stats.longterm.topic.name=hashtag-stats-longterm
+stats.recent.topic.name=hashtag-stats-recent
 stats.recent.duration=5
 stats.recent.duration.advance=1
 
